--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,13 +23,15 @@
 
 /* Sección Home */
 .home {
-  background: linear-gradient(to right, #075E54, #15202B);
+  background: linear-gradient(to right, #075E54, #d1d5db);
   color: white;
 }
 .home h1 {
   font-size: 2.5rem;
 }
-
+.home p {
+  color: black;
+}
 .home button {
   background-color: var(--secondary-color);
   color: white;
@@ -77,30 +79,70 @@
 }
 
 .image-container img {
-  width: 100%;
+  width: 90%;
   max-width: 600px; /* Ajusta según el tamaño deseado */
   border-radius: 10px;
 }
-
 .plans-container {
   display: flex;
   justify-content: center;
-  gap: 20px; /* Espaciado entre los cuadros */
+  gap: 20px;
   margin-top: 20px;
 }
 
 .plan-card {
-  background-color: var(--primary-color);
-  color: white;
+  width: 280px;
   padding: 30px;
-  border-radius: 10px;
-  width: 300px; /* Tamaño de cada cuadro */
   text-align: center;
+  border-radius: 15px;
+  color: white;
+  font-weight: bold;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background: linear-gradient(to bottom, var(--primary-color), var(--accent-color));
 }
 
-.plan-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+.plan-card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.plan-card p {
+  font-size: 1rem;
+  margin: 5px 0;
+}
+
+.plan-card .price {
+  font-size: 1.8rem;
+  margin-top: 15px;
+}
+
+.plan-card .price span {
+  font-size: 1rem;
+}
+
+.plan-card button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  background-color: var(--secondary-color);
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  transition: background 0.3s ease;
+}
+
+.plan-card button:hover {
+  background-color: var(--accent-color);
+}
+
+/* Estilos individuales para cada plan */
+.family {
+  background: linear-gradient(to bottom, #28a58f, #aabcb7); /* Verde de ViajeSeguro */
+}
+
+.executive {
+  background: linear-gradient(to bottom, #313940, #797d82); /* Azul oscuro elegante */
 }
