--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,7 @@
+/* Importar fuente llamativa */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+/* Variables de colores */
 :root {
   --primary-color: #28a58f;
   --secondary-color: #313940;
@@ -5,13 +9,16 @@
   --accent-color: #038C65;
 }
 
-/* Contenedor principal */
-.home-about {
-  width: 100%;
-  scroll-behavior: smooth;
+/* Estilos generales */
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-light);
+  color: var(--secondary-color);
 }
 
-/* Estilo base para ambas secciones */
+/* Secciones */
 .section {
   display: flex;
   align-items: center;
@@ -21,45 +28,38 @@
   padding: 50px;
 }
 
-/* Sección Home */
+/* Home Section */
 .home {
-  background: linear-gradient(to right, #075E54, #d1d5db);
+  background: linear-gradient(to right, #075E54, #d5dbe2);
   color: white;
-}
-.home h1 {
-  font-size: 2.5rem;
 }
 .home p {
-  color: black;
+  color: #313940;
 }
+.home h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 .home button {
-  background-color: var(--secondary-color);
-  color: white;
-  padding: 20px 30px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 15px 30px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  background: linear-gradient(to right, var(--primary-color), var(--accent-color));
+  color: white;
+  transition: transform 0.2s, box-shadow 0.3s;
 }
 
 .home button:hover {
-  background-color: var(--accent-color);
+  transform: scale(1.05);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(to right, var(--accent-color), var(--primary-color));
 }
-  /* seccion service*/
-  .description {
-      background-color: #FEFFFE;
-      color: var(--secondary-color);
-    }
-
-  .scope {
-      background-color: #F3F5F6;
-      color: #15202B;
-  }
-
-  .revenue {
-      background-color: #FEFFFE;
-      color: var(--secondary-color);
-    }
-
 
 /* Sección About */
 .about {
@@ -71,6 +71,7 @@
   max-width: 60%;
 }
 
+/* Estilos para la imagen */
 .image-container {
   margin-left: 25%;
   max-width: 50%;
@@ -79,70 +80,74 @@
 }
 
 .image-container img {
-  width: 90%;
-  max-width: 600px; /* Ajusta según el tamaño deseado */
+  width: 100%;
+  max-width: 600px;
   border-radius: 10px;
 }
+
+/* Estilos para los Planes */
 .plans-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 40px;
+  flex-wrap: wrap;
 }
 
 .plan-card {
-  width: 280px;
+  width: 40%;
+  background: linear-gradient(to bottom, #fff, var(--background-light));
   padding: 30px;
-  text-align: center;
   border-radius: 15px;
-  color: white;
-  font-weight: bold;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  background: linear-gradient(to bottom, var(--primary-color), var(--accent-color));
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s;
+  border: 2px solid var(--primary-color);
 }
 
-.plan-card h3 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+.plan-card:hover {
+  transform: translateY(-10px);
+}
+
+.plan-card h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--accent-color);
 }
 
 .plan-card p {
-  font-size: 1rem;
-  margin: 5px 0;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.6;
 }
 
 .plan-card .price {
   font-size: 1.8rem;
-  margin-top: 15px;
-}
-
-.plan-card .price span {
-  font-size: 1rem;
+  font-weight: 700;
+  color: var(--primary-color);
+  margin: 20px 0;
 }
 
 .plan-card button {
-  margin-top: 15px;
-  padding: 10px 20px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 15px 30px;
+  border-radius: 10px;
   border: none;
-  border-radius: 8px;
-  background-color: var(--secondary-color);
-  color: white;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: bold;
-  transition: background 0.3s ease;
+  background: linear-gradient(to right, var(--primary-color), var(--accent-color));
+  color: white;
+  transition: transform 0.2s, box-shadow 0.3s;
 }
 
 .plan-card button:hover {
-  background-color: var(--accent-color);
+  transform: scale(1.05);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(to right, var(--accent-color), var(--primary-color));
 }
 
-/* Estilos individuales para cada plan */
-.family {
-  background: linear-gradient(to bottom, #28a58f, #aabcb7); /* Verde de ViajeSeguro */
-}
-
-.executive {
-  background: linear-gradient(to bottom, #313940, #797d82); /* Azul oscuro elegante */
+/* Responsividad */
+@media (max-width: 768px) {
+  .plan-card {
+    width: 80%;
+  }
 }
