--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,28 +1,116 @@
+/* Navbar.css */
+
+/* Variables de colores */
+:root {
+  --primary-color: #28a58f;
+  --secondary-color: #313940;
+  --highlight-color: #FFD700;
+  --background-light: #f5f5f5;
+  --accent-color: #038C65;
+}
+
+/* Barra de navegación */
 .navbar {
+  background-color: var(--secondary-color);
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Contenedor del navbar */
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+/* Contenedor del logo */
+.logo-container {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+/* Imagen del logo */
+.logo-image {
+  height: 65px;
+  width: auto;
+  margin-right: 10px;
+}
+
+/* Texto del logo */
+.logo {
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+/* Lista de links */
+.nav-menu {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+/* Estilos de los links */
+.nav-menu a {
+  color: var(--background-light);
+  font-weight: bold;
+  text-decoration: none;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+/* Efecto hover en los links */
+.nav-menu a:hover {
+  color: var(--highlight-color);
+  transform: scale(1.05);
+}
+
+/* Efecto cuando el enlace está activo */
+.nav-menu a:active {
+  color: var(--highlight-color);
+  transform: scale(0.98);
+}
+
+/* Icono del menú hamburguesa */
+.menu-icon {
+  display: none;
+  color: var(--background-light);
+  cursor: pointer;
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .nav-menu {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
     background-color: var(--secondary-color);
-    padding: 15px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
+    gap: 15px;
+    padding: 20px 0;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    visibility: hidden;
   }
-  
-  .navbar .logo {
-    color: var(--primary-color);
-    font-size: 1.5rem;
+
+  .nav-menu.active {
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
   }
-  .navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-  
-  .navbar a {
-    color: var(--background-light);
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    color: var(--highlight-color);
-  }
-  
+}
