--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
   --primary-color: #2FE2C1;
   --secondary-color: #313940;
-  --light-background: #F2F2F2;
+  --light-background: #b9b6b6;
   --dark-green: #038C65;
   --medium-green: #1FBF92;
   --text-color: #313940;
